--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,10 @@
         tools:context=".Camper" >
 
         <ListView
-            android:id="@+id/listadevice"
+            android:id="@+id/list"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/background_light"
             android:divider="#005b00"
             android:dividerHeight="1dp" />
 
