--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -4,15 +4,13 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="5dip"
-        >
+        android:padding="5dip" >
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="17dip"
-             />
+            android:textSize="17dip" />
 
         <TextView
             android:id="@+id/description"
@@ -20,7 +18,6 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/title"
             android:layout_marginTop="1dip"
-            android:textSize="14dip"
-             />
+            android:textSize="14dip" />
 
     </RelativeLayout>
