--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,15 @@
 
         <ListView
             android:id="@+id/listadevice"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="667dp"
             android:divider="#005b00"
             android:dividerHeight="1dp" />
+
+        <TextView
+            android:id="@+id/checkConnect"
+            android:layout_width="match_parent"
+            android:layout_height="43dp" />
 
     </LinearLayout>
 
