--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,24 @@
         android:layout_height="fill_parent"
         android:orientation="vertical" >
 
+        <TextView
+            android:id="@+id/checkConnect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/btnChat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="changeActivity"
+            android:text="Chat" />
+
         <ListView
             android:id="@+id/listadevice"
             android:layout_width="wrap_content"
             android:layout_height="667dp"
             android:divider="#005b00"
             android:dividerHeight="1dp" />
-
-        <TextView
-            android:id="@+id/checkConnect"
-            android:layout_width="match_parent"
-            android:layout_height="43dp" />
 
     </LinearLayout>
 
