--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -7,12 +7,13 @@
         android:padding="5dip" >
 
     <Button
-        android:text="Connetti"
+        android:id="@+id/btnConnetti"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:id="@+id/btnScrivi"/>
+        android:onClick="changeActivity"
+        android:text="Connetti" />
 
 
     <TextView
@@ -29,4 +30,4 @@
             android:layout_marginTop="1dip"
             android:textSize="14dip" />
 
-    </RelativeLayout>
+</RelativeLayout>
