NON VA READ, WRITE
I dispositivi si connettono, parte l'ascolto di entrambi, si cambia activity a quella della chat, ma non funziona il read e il write per mandare e leggere i messaggi

--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -12,10 +12,11 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginRight="16dp"
+        android:layout_marginBottom="53dp"
+        android:onClick="scrivi"
         android:text="Scrivi"
         tools:layout_editor_absoluteX="317dp"
-        tools:layout_editor_absoluteY="640dp"
-        android:layout_marginBottom="53dp" />
+        tools:layout_editor_absoluteY="640dp" />
 
     <EditText
         android:id="@+id/scriviTesto"
