--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:id="@+id/btnChat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="changeActivity"
+            android:onClick="changeActivityMessage"
             android:text="Chat" />
 
         <ListView
