--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="53dp"
-        android:onClick="btnScrivi"
+        android:onClick="scrivi"
         android:text="Scrivi"
         tools:layout_editor_absoluteX="317dp"
         tools:layout_editor_absoluteY="640dp" />
