--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent">
 
     <Button
+        android:id="@+id/btnLeggi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="leggi"
+        android:text="Leggi"
+        android:visibility="visible" />
+
+    <Button
         android:id="@+id/btnScrivi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -60,20 +68,5 @@
         android:layout_marginTop="78dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="191dp" />
-
-    <Button
-        android:id="@+id/btnLeggi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="305dp"
-        android:layout_marginTop="560dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="123dp"
-        android:onClick="leggi"
-        android:text="Leggi" />
 
 </RelativeLayout>
