--- a/app/src/main/res/layout/activity_obd.xml
+++ b/app/src/main/res/layout/activity_obd.xml
@@ -222,16 +222,14 @@
         app:layout_constraintVertical_bias="0.375" />
 
     <Button
-        android:id="@+id/btnInfo"
+        android:id="@+id/btnInizializza"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="informazioni"
-        android:text="Info"
+        android:onClick="inizializza"
+        android:text="Inizializza"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.39"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
