--- a/app/src/main/res/layout/activity_obd.xml
+++ b/app/src/main/res/layout/activity_obd.xml
@@ -221,30 +221,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.375" />
 
-    <Button
-        android:id="@+id/btnInfo"
+    <Switch
+        android:id="@+id/switchDati"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="informazioni"
-        android:text="Info"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.421"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.282" />
-
-    <Button
-        android:id="@+id/btnInizializza"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="inizializza"
-        android:text="Inizializza"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.386"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.197" />
+        android:text="Dati"
+        tools:layout_editor_absoluteX="135dp"
+        tools:layout_editor_absoluteY="21dp" />
 
 </android.support.constraint.ConstraintLayout>
