--- a/app/src/main/res/layout/activity_obd.xml
+++ b/app/src/main/res/layout/activity_obd.xml
@@ -14,23 +14,23 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.936"
+        app:layout_constraintHorizontal_bias="0.896"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.791" />
 
     <TextView
         android:id="@+id/pressioneGommeBar"
-        android:layout_width="141dp"
-        android:layout_height="29dp"
+        android:layout_width="103dp"
+        android:layout_height="43dp"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.148"
+        app:layout_constraintHorizontal_bias="0.194"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.868" />
+        app:layout_constraintVertical_bias="0.877" />
 
     <TextView
         android:id="@+id/pressioneGomme"
@@ -47,29 +47,29 @@
 
     <TextView
         android:id="@+id/tempRefrigeranteDegrees3"
-        android:layout_width="100dp"
-        android:layout_height="37dp"
+        android:layout_width="103dp"
+        android:layout_height="43dp"
         android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.819"
+        app:layout_constraintHorizontal_bias="0.831"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.878" />
+        app:layout_constraintVertical_bias="0.877" />
 
     <TextView
         android:id="@+id/consumoMedioLT"
-        android:layout_width="139dp"
-        android:layout_height="22dp"
+        android:layout_width="103dp"
+        android:layout_height="43dp"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.169"
+        app:layout_constraintHorizontal_bias="0.194"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.645" />
+        app:layout_constraintVertical_bias="0.684" />
 
     <TextView
         android:id="@+id/consumoMedio"
@@ -85,30 +85,30 @@
         app:layout_constraintVertical_bias="0.576" />
 
     <TextView
-        android:id="@+id/percBatteria"
-        android:layout_width="138dp"
+        android:id="@+id/carburante"
+        android:layout_width="114dp"
         android:layout_height="28dp"
-        android:text="Perc Batteria"
-        android:textSize="24sp"
+        android:text="Carburante"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.82"
+        app:layout_constraintHorizontal_bias="0.824"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.576" />
 
     <TextView
-        android:id="@+id/percBatteria2"
-        android:layout_width="111dp"
-        android:layout_height="53dp"
+        android:id="@+id/carburante2"
+        android:layout_width="103dp"
+        android:layout_height="43dp"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.813"
+        app:layout_constraintHorizontal_bias="0.831"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.654" />
+        app:layout_constraintVertical_bias="0.684" />
 
     <TextView
         android:id="@+id/tempOut"
@@ -126,7 +126,6 @@
         android:id="@+id/marcia"
         android:layout_width="89dp"
         android:layout_height="137dp"
-        android:text="N"
         android:textSize="120sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -151,7 +150,7 @@
     <TextView
         android:id="@+id/rpm"
         android:layout_width="184dp"
-        android:layout_height="60dp"
+        android:layout_height="61dp"
         android:layout_marginEnd="16dp"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -176,29 +175,29 @@
 
     <TextView
         android:id="@+id/tempMotoreDegrees"
-        android:layout_width="76dp"
-        android:layout_height="44dp"
+        android:layout_width="103dp"
+        android:layout_height="43dp"
         android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.208"
+        app:layout_constraintHorizontal_bias="0.194"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.467" />
+        app:layout_constraintVertical_bias="0.46" />
 
     <TextView
         android:id="@+id/tempRefrigeranteDegrees2"
-        android:layout_width="78dp"
-        android:layout_height="39dp"
+        android:layout_width="103dp"
+        android:layout_height="43dp"
         android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.738"
+        app:layout_constraintHorizontal_bias="0.831"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.463" />
+        app:layout_constraintVertical_bias="0.46" />
 
     <TextView
         android:id="@+id/tempRefrigerante"
@@ -208,7 +207,7 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.809"
+        app:layout_constraintHorizontal_bias="0.86"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.375" />
@@ -222,6 +221,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
+        app:layout_constraintVertical_bias="0.995" />
 
 </android.support.constraint.ConstraintLayout>
