--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -164,7 +164,30 @@
                 <TextView
                     android:id="@+id/consumoMedioLT"
                     android:layout_width="0dp"
-                    android:layout_height="125dp"
+                    android:layout_height="65dp"
+                    android:textAlignment="center"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
+                    card_view:layout_constraintEnd_toEndOf="parent"
+                    card_view:layout_constraintStart_toStartOf="parent"
+                    card_view:layout_constraintTop_toTopOf="parent"
+                    card_view:layout_constraintVertical_bias="0.29000002" />
+
+                <TextView
+                    android:id="@+id/massAirFlow"
+                    android:layout_width="0dp"
+                    android:layout_height="20dp"
+                    android:text="Mass Air Flow"
+                    android:textAlignment="center"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
+                    card_view:layout_constraintEnd_toEndOf="parent"
+                    card_view:layout_constraintStart_toStartOf="parent"
+                    card_view:layout_constraintTop_toTopOf="parent"
+                    card_view:layout_constraintVertical_bias="0.69" />
+
+                <TextView
+                    android:id="@+id/massAirFlowg_s"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
                     android:textAlignment="center"
                     card_view:layout_constraintBottom_toBottomOf="parent"
                     card_view:layout_constraintEnd_toEndOf="parent"
